--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  http: ^1.3.0
+  dio: ^5.4.0
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
-  html: ^0.15.6
-  dio: ^5.4.0
+  flutter_inappwebview: ^6.0.0
   device_info_plus: ^9.1.2
-  webview_flutter: ^4.4.2
-  flutter_downloader: ^1.11.7
-  connectivity_plus: ^5.0.2
-  cached_network_image: ^3.3.1
+  provider: ^6.1.2
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
