--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,11 @@ dependencies:
   uuid: ^4.4.0
   file_picker: ^8.0.0+1
   shared_preferences: ^2.2.3
+  image: ^4.5.4
+  open_file: ^3.3.2
+  intl: ^0.19.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
